homework10/Interpreter/magic_speak_parser_specs.jjt

options {
  JAVA_UNICODE_ESCAPE = true;
  NODE_PREFIX = "AST";
  MULTI = true;
  STATIC = false;
  NODE_DEFAULT_VOID = true;
}

PARSER_BEGIN(Parser)                    //The parser class name is "Parser"
import java.io.*;
public class Parser {}
PARSER_END(Parser)


/////////////////////  Lexical Analyzer Rules  ////////////////////////


SKIP : {
  " "
| "\t"
| "\n"
| "\r"
| "\f"
}

TOKEN_MGR_DECLS: {
      public static int commentNestingCounter = 0;
}

SKIP: {
      <"//" (~["\n","\r"])* ("\r\n"|"\r"|"\n") >
}

SKIP: {
      <"/*"> {commentNestingCounter=1;}: INSIDE_COMMENT
}

<INSIDE_COMMENT> SKIP: {
      <"/*"> {commentNestingCounter++;}
}

<INSIDE_COMMENT> SKIP: {
      <"*/"> {commentNestingCounter--; if (commentNestingCounter==0) SwitchTo(DEFAULT);}
|
      <~[]>
}

TOKEN : 
{
  < NUMBER: (<DIGIT>)+ ( "." (<DIGIT>)+ )? >
|
  < #DIGIT: [ "0"-"9" ] >
}

TOKEN : { < DETERMINER: "the" | "every" | "this" | "a" | "an" > }

TOKEN: { < NOUN: "wand" | "chess" | "spell" | "business" | "beings" | "help" | "magic"
                        | "mousetraps" | "dementors" | "world" | "wizards" | "charm"
                        | "polyjuice" | "potion" | "else" | "pieces" | "problems" > }

TOKEN: { < PRONOUN: "i" | "we" | "this" | "you" | "us" > }

TOKEN: { < ADJ: "magic" | "wizard" | "polyjuice" | "your" | "dark"
                        | "fast" | "large" | "dangerous" | "wizarding" | "no"
                        | "high" | "animated" | "else" | "difficult"> }

TOKEN: { < VERB: "is" | "are" | "have" | "has" | "make" 
                      | "want" | "cast" | "look" | "play" | "can"
                      | "makes" | "point" | "allows" 
                      | "construct" | "build" | "builds" 
                      | "stores" | "conquer" >}

TOKEN: { < PREPOSITION: "with" | "when" | "without" | "for" 
                               | "about" | "at" | "after" | "to" | "of"
                               | "between" | "but" | "below" 
                               | "in" | "into" | "like" | "except" 
                               | "following" | "on" | "than" | "over" 
                               | "near" | "of" | "like" | "near" 
                               | "since" | "up" | "upon" | "within" | "by" > }

TOKEN : /* words */
{
  < WORD: (<LETTER>)+ >
|
  < #LETTER: ["a"-"z", "A"-"Z"] >
}

/* SEPARATORS */
TOKEN :
{
      < PERIOD: "." >
}


//////////////////////////   Grammar Rules  /////////////////////////////

ASTMagicalSpeech MagicalSpeech() #MagicalSpeech :
{}
{
    ( Statement() <PERIOD> )+
    { return jjtThis; }
}

void Statement() #Statement : 
{ }
{
    NP() VP()
}

void NP() #NounPhrase :
{}
{
    ( Pronoun() | ( ( Determiner() )? ( Adjective() )* CN() ) ) (PP())?
}

void CN() #CompoundNoun:
{}
{
    Noun() ( Noun() )?
}

void PP() #PrepPhrase :
{}
{
//    Preposition() ( Adjective() )? ( (NP() (VP())?) | VP() )
    Preposition() ( Adjective() )? NP()
}

void VP() #VerbPhrase :
{}
{
    Verb() (NP() | PP())
}

///////////////////////// Grammar Leaf Nodes  //////////////////////////

void Noun() #Noun :
{Token t;}
{
    t=<NOUN> {jjtThis.setLexem(t.image);}
}

void Pronoun() #Pronoun :
{Token t;}
{
    t=<PRONOUN> {jjtThis.setLexem(t.image);}
}

void Determiner() #Determiner :
{Token t;}
{
    t=<DETERMINER> {jjtThis.setLexem(t.image);}
}

void Adjective() #Adjective :
{Token t;}
{
    t=<ADJ> {jjtThis.setLexem(t.image);}
}

void Preposition() #Preposition :
{Token t;}
{
    t=<PREPOSITION> {jjtThis.setLexem(t.image);}
}

void Verb() #Verb :
{Token t;}
{
    t=<VERB> {jjtThis.setLexem(t.image);}
}
